 * Issue 114: process username Windows implementation has been rewritten in pure
   C and no longer uses WMI resulting in a big speedup. Also, pywin32 is no
   longer required as a third-party dependancy. (patch by wj32)
 * Issue 117: added support for Windows 2000.
 * Issue 123: psutil.cpu_percent() and psutil.Process.cpu_percent() accept a
   new 'interval' parameter.

BUGFIXES

 * Issue 81: psutil fails to compile with Visual Studio.
 * Issue 94: suspend() raises OSError instead of AccessDenied.
 * Issue 86: psutil didn't compile against FreeBSD 6.x.
 * Issue 102: orphaned process handles obtained by using OpenProcess in C were
   left behind every time Process class was instantiated.
 * Issue 111: path and name Process properties report truncated or erroneous
   values on UNIX.
 * Issue 120: cpu_percent() always returning 100% on OS X.
 * Issue 112: uid and gid properties don't change if process changes effective
   user/group id at some point.
 * Issue 126: ppid, uid, gid, name, exe, cmdline and create_time properties are
   no longer cached and correctly raise NoSuchProcess exception if the process
   disappears.

API CHANGES

 * psutil.Process.path property is deprecated and works as an alias for "exe"
   property.
 * psutil.Process.kill(): signal argument was removed - to send a signal to the
   process use send_signal(signal) method instead.
 * psutil.Process.get_memory_info() returns a nametuple instead of a tuple.
 * psutil.cpu_times() returns a nametuple instead of a tuple.
 * New psutil.Process methods: get_open_files(), get_connections(),
   send_signal() and terminate().
 * ppid, uid, gid, name, exe, cmdline and create_time properties are no longer
   cached and raise NoSuchProcess exception if process disappears.
 * psutil.cpu_percent() no longer returns immediately (see issue 123).
 * psutil.Process.get_cpu_percent() and psutil.cpu_percent() no longer returns
   immediately by default (see issue 123).


0.1.3 - 2010-03-02
------------------
